# NokiaCleanCode2020

./: .gitignore  CMakeLists.txt  README.md  bootstrap.sh  check_valgrind.sh  integration_test.sh  valgrind.supp
src/: Algorithm.cpp  Algorithm.hpp  Distribution_App.cpp  Distribution_App.hpp  IO.cpp  IO.hpp  Manifest.cpp  Manifest.hpp  Pool.cpp  Pool.hpp  main.cpp
test/: test1.cpp
testcases/: case-1-input.txt  case-1-output.txt  case-2-input.txt  case-2-output.txt
